tester/testsuite/good/core020.jl
int main() {
    p();
    printInt(1);
    return 0;
}

void p() {}
